fix addNewCoversation filter

--- a/src/components/containers/message-user-data/_message-user-data.sass
+++ b/src/components/containers/message-user-data/_message-user-data.sass
@@ -67,3 +67,6 @@
 @media (max-width: 1636px)
   .message-user-data-aside
     width: auto
+  .user-active
+    width: 12px
+    height: 12px
