--- a/src/screens/menu/_side-header.sass
+++ b/src/screens/menu/_side-header.sass
@@ -1,7 +1,7 @@
 .side-header-wrap
   box-shadow: 0 3px 80px rgba(23, 24, 32, 0.2)
   background-color: #2481ce
-  padding: 1.2em 3em 1.2em 4em
+  padding: 1.2em 4em 1.2em 4em
   width: 100%
   position: fixed
   z-index: 1000
